// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render EntryForm 1`] = `
<div>
  <h1
    className="form__entry-header"
  >
    Entry Form
  </h1>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <textarea
      className="textarea"
      disabled={true}
      maxLength="1000"
      onChange={[Function]}
      placeholder="Text"
      value=""
    />
    <input
      className="text-input"
      maxLength="70"
      onChange={[Function]}
      placeholder="Author (Optional)"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Youtube Video URL"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Image URL"
      type="text"
      value=""
    />
    <textarea
      className="textarea"
      onChange={[Function]}
      placeholder="Why is this  important to you?"
      value=""
    />
    <div>
      <button
        className="button button--save"
      >
        Save Entry
      </button>
    </div>
  </form>
</div>
`;

exports[`should render EntryForm with entry data 1`] = `
<div>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <textarea
      className="textarea"
      disabled={false}
      maxLength="1000"
      onChange={[Function]}
      placeholder="Text"
      value="testing"
    />
    <input
      className="text-input"
      maxLength="70"
      onChange={[Function]}
      placeholder="Author (Optional)"
      type="text"
      value="Kobe Bryant"
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Youtube Video URL"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Image URL"
      type="text"
      value=""
    />
    <textarea
      className="textarea"
      onChange={[Function]}
      placeholder="Why is this text important to you?"
      value=""
    />
    <div>
      <button
        className="button button--save"
      >
        Save Entry
      </button>
    </div>
  </form>
</div>
`;

exports[`should render error for invalid image submission 1`] = `
<div>
  <h1
    className="form__entry-header"
  >
    Entry Form
  </h1>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <textarea
      className="textarea"
      disabled={true}
      maxLength="1000"
      onChange={[Function]}
      placeholder="Text"
      value=""
    />
    <input
      className="text-input"
      maxLength="70"
      onChange={[Function]}
      placeholder="Author (Optional)"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Youtube Video URL"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={false}
      onChange={[Function]}
      placeholder="Image URL"
      type="text"
      value=""
    />
    <textarea
      className="textarea"
      onChange={[Function]}
      placeholder="Why is this image important to you?"
      value=""
    />
    <div>
      <button
        className="button button--save"
      >
        Save Entry
      </button>
    </div>
  </form>
</div>
`;

exports[`should render error for invalid image submission 2`] = `
<div>
  <h1
    className="form__entry-header"
  >
    Entry Form
  </h1>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <p
      className="form__error"
    >
      Please provide a URL for your image entry.
    </p>
    <textarea
      className="textarea"
      disabled={true}
      maxLength="1000"
      onChange={[Function]}
      placeholder="Text"
      value=""
    />
    <input
      className="text-input"
      maxLength="70"
      onChange={[Function]}
      placeholder="Author (Optional)"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Youtube Video URL"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={false}
      onChange={[Function]}
      placeholder="Image URL"
      type="text"
      value=""
    />
    <textarea
      className="textarea"
      onChange={[Function]}
      placeholder="Why is this image important to you?"
      value=""
    />
    <div>
      <button
        className="button button--save"
      >
        Save Entry
      </button>
    </div>
  </form>
</div>
`;

exports[`should render error for invalid text submission 1`] = `
<div>
  <h1
    className="form__entry-header"
  >
    Entry Form
  </h1>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <textarea
      className="textarea"
      disabled={false}
      maxLength="1000"
      onChange={[Function]}
      placeholder="Text"
      value=""
    />
    <input
      className="text-input"
      maxLength="70"
      onChange={[Function]}
      placeholder="Author (Optional)"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Youtube Video URL"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Image URL"
      type="text"
      value=""
    />
    <textarea
      className="textarea"
      onChange={[Function]}
      placeholder="Why is this text important to you?"
      value=""
    />
    <div>
      <button
        className="button button--save"
      >
        Save Entry
      </button>
    </div>
  </form>
</div>
`;

exports[`should render error for invalid text submission 2`] = `
<div>
  <h1
    className="form__entry-header"
  >
    Entry Form
  </h1>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <p
      className="form__error"
    >
      Please provide text for your text entry.
    </p>
    <textarea
      className="textarea"
      disabled={false}
      maxLength="1000"
      onChange={[Function]}
      placeholder="Text"
      value=""
    />
    <input
      className="text-input"
      maxLength="70"
      onChange={[Function]}
      placeholder="Author (Optional)"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Youtube Video URL"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Image URL"
      type="text"
      value=""
    />
    <textarea
      className="textarea"
      onChange={[Function]}
      placeholder="Why is this text important to you?"
      value=""
    />
    <div>
      <button
        className="button button--save"
      >
        Save Entry
      </button>
    </div>
  </form>
</div>
`;

exports[`should render error for invalid video submission 1`] = `
<div>
  <h1
    className="form__entry-header"
  >
    Entry Form
  </h1>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <textarea
      className="textarea"
      disabled={true}
      maxLength="1000"
      onChange={[Function]}
      placeholder="Text"
      value=""
    />
    <input
      className="text-input"
      maxLength="70"
      onChange={[Function]}
      placeholder="Author (Optional)"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={false}
      onChange={[Function]}
      placeholder="Youtube Video URL"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Image URL"
      type="text"
      value=""
    />
    <textarea
      className="textarea"
      onChange={[Function]}
      placeholder="Why is this video important to you?"
      value=""
    />
    <div>
      <button
        className="button button--save"
      >
        Save Entry
      </button>
    </div>
  </form>
</div>
`;

exports[`should render error for invalid video submission 2`] = `
<div>
  <h1
    className="form__entry-header"
  >
    Entry Form
  </h1>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <p
      className="form__error"
    >
      Please provide a URL for your video entry.
    </p>
    <textarea
      className="textarea"
      disabled={true}
      maxLength="1000"
      onChange={[Function]}
      placeholder="Text"
      value=""
    />
    <input
      className="text-input"
      maxLength="70"
      onChange={[Function]}
      placeholder="Author (Optional)"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={false}
      onChange={[Function]}
      placeholder="Youtube Video URL"
      type="text"
      value=""
    />
    <input
      className="text-input"
      disabled={true}
      onChange={[Function]}
      placeholder="Image URL"
      type="text"
      value=""
    />
    <textarea
      className="textarea"
      onChange={[Function]}
      placeholder="Why is this video important to you?"
      value=""
    />
    <div>
      <button
        className="button button--save"
      >
        Save Entry
      </button>
    </div>
  </form>
</div>
`;
